--- a/index.html
+++ b/index.html
@@ -8,158 +8,202 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/40538e0056.js" crossorigin="anonymous"></script>
     <title>Christopher Pitts</title>
   </head>
   <body>
-    <div class="container bg-light main-content">
-
+    <div class="container py-3">
       <!-- Header Section -->
-      <div class="jumbotron bg-light pb-0 mb-0">
-        <h1 class="display-4 font-weight-normal">Christopher Pitts</h1>
-        <p class="lead">Experiece in graphic design, web development, web management, programming</p>
-        <p class="lead">
-          <a class="btn btn-lg social p-2 mr-2  " href="https://github.com/cphpitts" role="button"><img src="images/github-dark.png" alt="GitHub"></a>
-          <a class="btn btn-lg social p-2" href="https://www.linkedin.com/in/cphpitts" role="button"><img src="images/linkedin-dark.png" alt="LinkedIn"></a>
-        </p>
-        <hr class="my-5">
+      <div class="row">
+        <div class="col-2 p-0">
+          <div class="card photo">
+            <img src="images/christopherpitts.png" alt="Christopher Pitts" class="w-100">
+          </div>
+        </div>
+        <div class="col-6 bg-white my-4 p-0">
+          <div class="row pl-4 pt-4">
+            <div class="col">
+              <h2 class="name m-0">Christopher Pitts</h2>
+              <div class="title">Developer</div>
+            </div>
+          </div>
+          <div class="row pl-4 pt-3">
+            <div class="col">
+              <div class="link"><a href="#"><span class="fas fa-envelope"></span> E-Mail Me</a></div>
+              <div class="link"><a href="#"><span class="fas fa-file-download"></span> Download Resume</a></div>
+            </div>
+            <div class="col">
+              <div class="link"><a href="#">Github</a></div>
+              <div class="link"><a href="#">LinkedIn</a></div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <!-- Skills -->
-      <div class="container bg-light">
-        <h3 class="section p-3">Skills</h3>
-          <div class="row mt-2">
-            <div class="col-6 bg-light">
-              <div class="card h-100">
-                <h5 class="card-title p-3 m-0">Programming Languages and Frameworks</h5>
-                <div class="card-body px-0 pb-1">
-                  <div class="row">
-                    <div class="col">
+      <!-- Body -->
+      <div class="row mt-3">
+        <!-- Menu Bar -->
+        <div class="col-1 pl-0">
+          <div class="menu_item"><span class="fas fa-home"></span><br />Home</div>
+          <div class="menu_item"><span class="fas fa-code"></span><br />Experience</div>
+          <div class="menu_item"><span class="fas fa-briefcase"></span><br />Job History</div>
+          <div class="menu_item"><span class="fas fa-university"></span><br />Education</div>
+        </div>
+
+        <!-- Content -->
+        <div class="col bg-white pb-4" id="content-box">
+
+          <div class="container">
+            <div class="row pt-4 pl-4 pr-4 pb-2">
+              <h5>Experience</h5>
+              <div class="px-2">
+                <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
+                <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
+              </div>
+            </div>
+            <hr class="w-75">
+            <div class="row p-3">
+              <div class="col">
+                <div class="row"><h5>Skills</h5></div>
+                <div class="row">
+                  <div class="col"><div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Languages</div>
+                    <div class="card-body">
                       <ul>
-                        <li>Python</li>
-                        <li>Django</li>
-                        <li>Flask</li>
-                        <li>C#</li>
-                        <li>.Net Framework</li>
-                        <li>Javascript</li>
-                      </ul>
-                    </div>
-                    <div class="col">
-                      <ul>
-                        <li>jQuery</li>
-                        <li>Knockout.JS</li>
-                        <li>MySQL</li>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>Bootstrap</li>
+                        <li>Javascript</li>
+                        <li>PYthon</li>
+                        <li>C#</li>
+                        <li>SQL</li>
                       </ul>
                     </div>
-                  </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Frameworks/ Libraries</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Django</li>
+                        <li>.Net Core</li>
+                        <li>Bootstrap</li>
+                        <li>jQuery</li>
+                        <li>Knockout.js</li>
+                        <li>Node.js</li>
+                        <li>Socket.io</li>
+                      </ul>
+                    </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> IDEs</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio 2019</li>
+                        <li>PyCharm</li>
+                        <li>Atom</li>
+                      </ul>
+                    </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Graphic Design</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Adobe Illustrator</li>
+                        <li>Adobe InDesign</li>
+                        <li>Adobe Photoshop</li>
+                      </ul>
+                    </div>
+                  </div></div>
                 </div>
               </div>
             </div>
-            <div class="col-3 bg-light">
-              <div class="card h-100">
-                <h5 class="card-title p-3 m-0">Web Management</h5>
-                <div class="card-body px-0 pb-1">
-                  <ul>
-                    <li>Magento</li>
-                    <li>Miva Merchant</li>
-                    <li>GitHub</li>
-                    <li>Filezilla</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-3 bg-light">
-              <div class="card h-100">
-                <h5 class="card-title p-3 m-0">Graphic Design</h5>
-                <div class="card-body px-0 pb-1">
-                  <ul>
-                    <li>Adobe Photoshop</li>
-                    <li>Adobe Illustrator</li>
-                    <li>Adobe Dreamweaver</li>
-                    <li>Adobe InDesign</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
-        <!-- Projects -->
-        <div class="container projects mt-5">
-          <h3 class="section p-3">Projects</h3>
-          <div class="row">
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Board Game Collection Tracker</h5>
-                  <div class="bold">Python | Django</div>
-                </div>
-                <div class="card-body">
-                  <div>This application allows a user to track their collection of board games. Users can enter data manually as well add games from a list of the hottest games from BoardGameGeek.com. This feature uses BoardGameGeek's API which returns an XML file which is then parsed and added to the database. There is also a news page that uses BeautifulSoup to scrape and parse the newest articles from DiceTowerNews.com.</div><br />
-                  <a href="https://github.com/cphpitts/boardgame_collection" target="_blank">
-                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
+          <div class="container">
+            <div class="row pt-4 pl-4 pr-4 pb-2">
+              <h5>About Me</h5>
+              <div class="px-2">
+                <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
+                <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
+              </div>
+            </div>
+            <hr class="w-75">
+            <div class="row p-3">
+              <div class="col">
+                <div class="row"><h5>Skills</h5></div>
+                <div class="row">
+                  <div class="col"><div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Languages</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>PYthon</li>
+                        <li>C#</li>
+                        <li>SQL</li>
+                      </ul>
+                    </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Frameworks/ Libraries</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Django</li>
+                        <li>.Net Core</li>
+                        <li>Bootstrap</li>
+                        <li>jQuery</li>
+                        <li>Knockout.js</li>
+                        <li>Node.js</li>
+                        <li>Socket.io</li>
+                      </ul>
+                    </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> IDEs</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio 2019</li>
+                        <li>PyCharm</li>
+                        <li>Atom</li>
+                      </ul>
+                    </div>
+                  </div></div>
+                  <div class="col">
+                  <div class="card">
+                    <div class="card-header"><span class="fas fa-angle-right"></span> Graphic Design</div>
+                    <div class="card-body">
+                      <ul>
+                        <li>Adobe Illustrator</li>
+                        <li>Adobe InDesign</li>
+                        <li>Adobe Photoshop</li>
+                      </ul>
+                    </div>
+                  </div></div>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Theatre Website</h5>
-                  <div class="bold">C# | .Net Framework</div>
-                </div>
-                <div class="card-body">
-                  <div>I contributed to an ongoing project to develop a new website for a small theatre in Portland, OR. My tasks including developing new features in the messages system such as a deleted messages tab and a search function, as well as modify how images are saved and displayed. I was also able to track and fix bugs in the system that dealt with managing information in the database.</div><br />
-                  <a href="https://github.com/cphpitts/theatreWebsite" target="_blank">
-                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">RPG Character Sheet</h5>
-                  <div class="bold">Javascript | Knockout.JS</div>
-                </div>
-                <div class="card-body">
-                  <div>This application is a concept for a character sheet for use with a tabletop roleplaying game. It uses Knockout.js to store and modify data related to character attributes.</div><br />
-                  <a href="https://github.com/cphpitts/characterSheet_KO" target="_blank">
-                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Virtual Tabletop</h5>
-                  <div class="bold">Javascript | Node.js | Socket.io</div>
-                </div>
-                <div class="card-body">
-                  <div>This application is a virtual tabletop designed to be used by a roleplaying group to track die rolls and combat encounters. It uses node.js as a server system and socket.io to allow all browsers to keep all information refreshed in realtime.</div><br />
-                  <a href="https://github.com/cphpitts/genesys_vtt" target="_blank">
-                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
-        <div class="footer w-100 p-2 mt-5">Christopher Pitts &copy;2020</div>
-
-        <!-- Last Div -->
-        <div class="clear"></div>
       </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      </div>
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script>
+  $( function() {
+    $( "#tabs" ).tabs();
+  } );
+  </script>
   </body>
 </html>
