--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Hoem Tab -->
         <div class="container" id="home">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h3>About Me</h3>
+            <h5>About Me</h5>
             <div class="px-2">
               <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
               <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
@@ -64,7 +64,7 @@
           <hr class="w-75 border-columbia">
           <div class="row p-3">
             <div class="col">
-              <div class="row"><h5>Skills</h5></div>
+              <div class="row"><h6>Skills</h6></div>
               <div class="row">
                 <div class="col">
                   <div class="card">
@@ -129,36 +129,42 @@
         <!-- Experience Tab -->
         <div class="container" id="experience">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h3>Experience</h3>
+            <h5>Experience</h5>
           </div>
           <div class="row">
             <!-- Boardgame Collection -->
             <div class="col">
               <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Board Game Collection Tracker</h5>
-                  <div class="bold">Python | Django</div>
+                <div class="card-title xp-title p-3 m-0">
+                  <div>
+                    <span class="fas fa-chess-rook"></span>
+                  </div>
+                  <div>
+                    <h6 class="m-0">Board Game Collection Tracker</h6>
+                    <div class="bold">Python | Django</div><br/ >
+                    <div><a href="https://github.com/cphpitts/boardgame_collection" target="_blank"><span class="fab fa-github" aria-hidden="true"></span> View on Github</a></div>
+                  </div>
                 </div>
-                <div class="card-body pt-0">
+                <div class="card-body py-0">
                   <div>This application allows a user to track their collection of board games. Users can enter data manually as well add games from a list of the hottest games from BoardGameGeek.com. This feature uses BoardGameGeek's API which returns an XML file which is then parsed and added to the database. There is also a news page that uses BeautifulSoup to scrape and parse the newest articles from DiceTowerNews.com.</div><br />
-                  <a href="https://github.com/cphpitts/boardgame_collection" target="_blank">
-                    <div class="badge badge-hope py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
                 </div>
               </div>
             </div>
             <!-- Theatre Website -->
             <div class="col">
               <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Theatre Website</h5>
-                  <div class="bold">C# | .Net Framework</div>
+                <div class="card-title xp-title p-3 m-0">
+                  <div>
+                    <span class="fas fa-theater-masks"></span>
+                  </div>
+                  <div>
+                    <h6 class="m-0">Theatre Website</h6>
+                    <div class="bold">C# | .Net Framework</div><br/ >
+                    <div><a href="https://github.com/cphpitts/theatreWebsite" target="_blank"><span class="fab fa-github" aria-hidden="true"></span> View on Github</a></div>
+                  </div>
                 </div>
-                <div class="card-body pt-0">
+                <div class="card-body py-0">
                   <div>I contributed to an ongoing project to develop a new website for a small theatre in Portland, OR. My tasks including developing new features in the messages system such as a deleted messages tab and a search function, as well as modify how images are saved and displayed. I was also able to track and fix bugs in the system that dealt with managing information in the database.</div><br />
-                  <a href="https://github.com/cphpitts/theatreWebsite" target="_blank">
-                    <div class="badge badge-hope py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
                 </div>
               </div>
             </div>
@@ -167,30 +173,36 @@
             <!-- RPG Character Sheet -->
             <div class="col">
               <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">RPG Character Sheet</h5>
-                  <div class="bold">Javascript | Knockout.JS</div>
+                <div class="card-title xp-title p-3 m-0">
+                  <div>
+                    <span class="fas fa-dice-d20"></span>
+                  </div>
+                  <div>
+                    <h6 class="m-0">RPG Character Sheet</h6>
+                    <div class="bold">Javascript | Knockout.JS</div><br/ >
+                    <div><a href="https://github.com/cphpitts/characterSheet_KO" target="_blank"><span class="fab fa-github" aria-hidden="true"></span> View on Github</a></div>
+                  </div>
                 </div>
-                <div class="card-body pt-0">
+                <div class="card-body py-0">
                   <div>This application is a concept for a character sheet for use with a tabletop roleplaying game. It uses Knockout.js to store and modify data related to character attributes.</div><br />
-                  <a href="https://github.com/cphpitts/characterSheet_KO" target="_blank">
-                    <div class="badge badge-hope py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
                 </div>
               </div>
             </div>
             <!-- Virtual Tabletop -->
             <div class="col">
               <div class="card h-100">
-                <div class="card-title p-3 m-0">
-                  <h5 class="m-0">Virtual Tabletop</h5>
-                  <div class="bold">Javascript | Node.js | Socket.io</div>
+                <div class="card-title xp-title p-3 m-0">
+                  <div>
+                    <span class="fas fa-dice"></span>
+                  </div>
+                  <div>
+                    <h6 class="m-0">Virtual Tabletop</h6>
+                    <div class="bold">Javascript | Node.js | Socket.io</div><br/ >
+                    <div><a href="https://github.com/cphpitts/genesys_vtt" target="_blank"><span class="fab fa-github" aria-hidden="true"></span> View on Github</a></div>
+                  </div>
                 </div>
-                <div class="card-body pt-0">
+                <div class="card-body py-0">
                   <div>This application is a virtual tabletop designed to be used by a roleplaying group to track die rolls and combat encounters. It uses node.js as a server system and socket.io to allow all browsers to keep all information refreshed in realtime.</div><br />
-                  <a href="https://github.com/cphpitts/genesys_vtt" target="_blank">
-                    <div class="badge badge-hope py-3 px-2 mt-2">View on GitHub</div>
-                  </a><br />
                 </div>
               </div>
             </div>
@@ -199,13 +211,13 @@
         <!-- Job History -->
         <div class="container" id="history">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h3>Job History</h3>
+            <h5>Job History</h5>
           </div>
-          <div class="row p-3">
+          <div class="row pt-0 px-3">
             <div class="col">
-              <h5>Prosper IT Consulting</h5>
+              <h6>Prosper IT Consulting</h6>
               <div>Internship</div>
-              <div>August 2020 - August 2020</div>
+              <div>July 2020 - August 2020</div>
               <div>
                 <ul>
                   <li>Developed new features for in-app messaging system</li>
@@ -217,7 +229,7 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <h5>MyBinding.com</h5>
+              <h6>MyBinding.com</h6>
               <div>Marketing Team Lead</div>
               <div>April 2015 - February 2020</div>
               <div>
@@ -238,9 +250,9 @@
         <!-- Education -->
         <div class="container" id="education">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h3>Education</h3>
+            <h5>Education</h5>
           </div>
-          <div class="row p-3">
+          <div class="row pt-0 px-3">
             <div class="col">
               <h5>The Tech Academy</h5>
               <div>Software Development Boot Camp Certificate</div>
