--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <div class="row pl-4 pt-3">
           <div class="col">
-            <div class="link"><a href="mailto:cphpitts@gmail.com"><span class="fas fa-envelope"></span> E-Mail Me</a></div>
-            <!-- <div class="link"><a href="#"><span class="fas fa-file-download"></span> Download Resume</a></div> -->
+            <div class="link"><a href="mailto:cphpitts@gmail.com"><span class="fas fa-envelope"></span> cphpitts@gmail.com</a></div>
+            <div class="link"><a href="files/christopher_pitts.pdf"><span class="fas fa-file-download"></span> Download Resume</a></div>
           </div>
           <div class="col">
             <div class="link"><a href="https://github.com/cphpitts"><span class="fab fa-github"></span> Github</a></div>
@@ -57,7 +57,7 @@
           <div class="row pt-4 pl-4 pr-4 pb-2">
             <h5>About Me</h5>
             <div class="px-2">
-              <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
+              <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continuously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
               <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
             </div>
           </div>
@@ -74,7 +74,7 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Javascript</li>
-                        <li>PYthon</li>
+                        <li>Python</li>
                         <li>C#</li>
                         <li>SQL</li>
                       </ul>
@@ -98,15 +98,32 @@
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card">
-                    <div class="card-header"><span class="fas fa-angle-right"></span> IDEs</div>
-                    <div class="card-body p-0 pt-2">
-                      <ul>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio 2019</li>
-                        <li>PyCharm</li>
-                        <li>Atom</li>
-                      </ul>
+                  <div class="row">
+                    <div class="col">
+                      <div class="card">
+                        <div class="card-header"><span class="fas fa-angle-right"></span> IDEs</div>
+                        <div class="card-body p-0 pt-2">
+                          <ul>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio 2019</li>
+                            <li>PyCharm</li>
+                            <li>Atom</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col">
+                      <div class="card">
+                        <div class="card-header"><span class="fas fa-angle-right"></span> Methodologies</div>
+                        <div class="card-body p-0 pt-2">
+                          <ul>
+                            <li>Scrum</li>
+                            <li>Agile</li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -215,34 +232,42 @@
           </div>
           <div class="row pt-0 px-3">
             <div class="col">
-              <h6>Prosper IT Consulting</h6>
-              <div>Internship</div>
-              <div>July 2020 - August 2020</div>
-              <div>
-                <ul>
-                  <li>Developed new features for in-app messaging system</li>
-                  <li>Modified processes of uploading and displaying images</li>
-                  <li>Identified and fixed bugs in database management systems</li>
-                </ul>
+              <div class="card">
+                <div class="card-title p-3 m-0">
+                  <h6>Prosper IT Consulting</h6>
+                  <div>Internship</div>
+                  <div>July 2020 - August 2020</div>
+                </div>
+                <div class="card-body py-0">
+                  <ul>
+                    <li>Developed new features for in-app messaging system</li>
+                    <li>Modified processes of uploading and displaying images</li>
+                    <li>Identified and fixed bugs in database management systems</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
           <div class="row p-3">
             <div class="col">
-              <h6>MyBinding.com</h6>
-              <div>Marketing Team Lead</div>
-              <div>April 2015 - February 2020</div>
-              <div>
-                <ul>
-                  <li>Create and present weekly and monthly sales and performance data</li>
-                  <li>Oversee project progress for local and overseas marketing and development teams</li>
-                  <li>Make content updates and perform routine maintenance for through the Magento platform</li>
-                  <li>Create custom content templates for category and informational pages using HTML and CSS</li>
-                  <li>Develop and modify javascript code to track and alter site content based on customer usage</li>
-                  <li>Develop long and short term strategies to grow sales revenue and conversion rate</li>
-                  <li>Research and implement third party solutions to improve website experience</li>
-                  <li>Perform routine tests to monitor site performance and page speed</li>
-                </ul>
+              <div class="card">
+                <div class="card-title p-3 m-0">
+                  <h6>MyBinding.com</h6>
+                  <div>Marketing Team Lead</div>
+                  <div>April 2015 - February 2020</div>
+                </div>
+                <div class="card-body py-0">
+                  <ul>
+                    <li>Created and presented weekly and monthly sales and performance data</li>
+                    <li>Oversaw project progress for local and overseas marketing and development teams</li>
+                    <li>Made content updates and performed routine maintenance for through the Magento platform</li>
+                    <li>Created custom content templates for category and informational pages using HTML and CSS</li>
+                    <li>Developed and modified javascript code to track and alter site content based on customer usage</li>
+                    <li>Developed long and short term strategies to grow sales revenue and conversion rate</li>
+                    <li>Researched and implemented third party solutions to improve website experience</li>
+                    <li>Performed routine tests to monitor site performance and page speed</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -254,14 +279,24 @@
           </div>
           <div class="row pt-0 px-3">
             <div class="col">
-              <h5>The Tech Academy</h5>
-              <div>Software Development Boot Camp Certificate</div>
-              <div>2020 - 2020</div>
+              <div class="card h-100">
+                <div class="card-title p-3 m-0">
+                  <h5>The Tech Academy</h5>
+                  <div>Software Development Boot Camp Certificate</div>
+                  <div>2020 - 2020</div>
+                </div>
+                <div class="card-body pt-0">Developed a fundamental knowledge of software development including usage of HTML, CSS, Javascript, Python and C#. Additional instruction included database management and design, SQL, source control, Scrum/Agile, object-oriented programming and computer science.</div>
+              </div>
             </div>
             <div class="col">
-              <h5>California State University, Fresno</h5>
-              <div>B.A. Art; Graphic Design</div>
-              <div>2002 - 2006</div>
+              <div class="card h-100">
+                <div class="card-title p-3 m-0">
+                  <h5>California State University, Fresno</h5>
+                  <div>B.A. Art; Graphic Design</div>
+                  <div>2002 - 2006</div>
+                </div>
+                <div class="card-body py-0">Developed skills in graphic design including print and web design. </div>
+              </div>
             </div>
           </div>
         </div>
