--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
         </div>
       </div>
       <div class="col-6 bg-white my-4 p-0">
-        <div class="row pl-4 pt-4">
+        <div class="row pl-5 pt-4">
           <div class="col">
-            <h2 class="name m-0">Christopher Pitts</h2>
+            <h2 class="name m-0"><span class="underline">Christopher Pitts</span></h2>
             <div class="title">Developer</div>
           </div>
         </div>
-        <div class="row pl-4 pt-3">
+        <div class="row pl-5 pt-3">
           <div class="col">
             <div class="link"><a href="mailto:cphpitts@gmail.com"><span class="fas fa-envelope"></span> cphpitts@gmail.com</a></div>
             <div class="link"><a href="files/christopher_pitts.pdf"><span class="fas fa-file-download"></span> Download Resume</a></div>
+            <!-- <div class="link"><a href="files/christopher_pitts.pdf"><span class="fas fa-file-download"></span> Download Resume - Word</a></div> -->
           </div>
           <div class="col">
             <div class="link"><a href="https://github.com/cphpitts"><span class="fab fa-github"></span> Github</a></div>
@@ -55,17 +56,17 @@
         <!-- Hoem Tab -->
         <div class="container" id="home">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h5>About Me</h5>
+            <h5 class="underline"><span>About Me</span></h5>
             <div class="px-2">
               <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continuously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
               <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
             </div>
           </div>
-          <hr class="w-75 border-columbia">
+          <hr class="w-75 border-accent">
           <div class="row p-3">
             <div class="col">
-              <div class="row"><h6>Skills</h6></div>
-              <div class="row">
+              <div class="row"><h6><span class="underline">Skills</span></h6></div>
+              <div class="row mt-3">
                 <div class="col">
                   <div class="card">
                     <div class="card-header"><span class="fas fa-angle-right"></span> Languages</div>
@@ -146,7 +147,7 @@
         <!-- Experience Tab -->
         <div class="container" id="experience">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h5>Experience</h5>
+            <h5><span class="underline">Experience</span></h5>
           </div>
           <div class="row">
             <!-- Boardgame Collection -->
@@ -154,7 +155,7 @@
               <div class="card h-100">
                 <div class="card-title xp-title p-3 m-0">
                   <div>
-                    <span class="fas fa-chess-rook"></span>
+                    <span class="fas fa-chess-rook accent"></span>
                   </div>
                   <div>
                     <h6 class="m-0">Board Game Collection Tracker</h6>
@@ -172,12 +173,12 @@
               <div class="card h-100">
                 <div class="card-title xp-title p-3 m-0">
                   <div>
-                    <span class="fas fa-theater-masks"></span>
+                    <span class="fas fa-theater-masks accent"></span>
                   </div>
                   <div>
                     <h6 class="m-0">Theatre Website</h6>
                     <div class="bold">C# | .Net Framework</div><br/ >
-                    <div><a href="https://github.com/cphpitts/theatreWebsite" target="_blank"><span class="fab fa-github" aria-hidden="true"></span> View on Github</a></div>
+                    <div><a href="https://github.com/cphpitts/theatreWebsite" target="_blank"><span class="fab fa-github " aria-hidden="true"></span> View on Github</a></div>
                   </div>
                 </div>
                 <div class="card-body py-0">
@@ -192,7 +193,7 @@
               <div class="card h-100">
                 <div class="card-title xp-title p-3 m-0">
                   <div>
-                    <span class="fas fa-dice-d20"></span>
+                    <span class="fas fa-dice-d20 accent"></span>
                   </div>
                   <div>
                     <h6 class="m-0">RPG Character Sheet</h6>
@@ -210,7 +211,7 @@
               <div class="card h-100">
                 <div class="card-title xp-title p-3 m-0">
                   <div>
-                    <span class="fas fa-dice"></span>
+                    <span class="fas fa-dice accent"></span>
                   </div>
                   <div>
                     <h6 class="m-0">Virtual Tabletop</h6>
@@ -228,7 +229,7 @@
         <!-- Job History -->
         <div class="container" id="history">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h5>Job History</h5>
+            <h5><span class="underline">Job History</span></h5>
           </div>
           <div class="row pt-0 px-3">
             <div class="col">
@@ -275,7 +276,7 @@
         <!-- Education -->
         <div class="container" id="education">
           <div class="row pt-4 pl-4 pr-4 pb-2">
-            <h5>Education</h5>
+            <h5><span class="underline">Education</span></h5>
           </div>
           <div class="row pt-0 px-3">
             <div class="col">
