--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="row pt-4 pl-4 pr-4 pb-2">
             <h5 class="underline"><span>About Me</span></h5>
             <div class="px-2">
-              <p>For more than 10 years I have developed a wide range of skills including graphic design, web management, software development, and project management. My desire to continuously learn and grow both personally and professionally has helped me to continue to thrive in new environments and with teams of all sizes. I am excited to continue my journey and do amazing things with you.</p>
+              <p>For more than 10 years I have developed a wide range of skills including web management, software development, project management and graphic design. My desire to continuously learn and grow both professionally and personally has helped me to continue to thrive in new environments with teams of all sizes. I am excited to continue my journey and build an amazing user experience with a diverse team.</p>
               <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
             </div>
           </div>
@@ -241,9 +241,10 @@
                 </div>
                 <div class="card-body py-0">
                   <ul>
-                    <li>Developed new features for in-app messaging system</li>
-                    <li>Modified processes of uploading and displaying images</li>
-                    <li>Identified and fixed bugs in database management systems</li>
+                    <li>Developed features for MVC website designed for local theatre with ASP.Net framework.</li>
+                    <li>Modified model structure and created new controller methods to display trashed messages.</li>
+                    <li>Added features to the admin dashboard to allow for easier editing of page information.</li>
+                    <li>Identified and fixed bugs regarding deletion of production data.</li>
                   </ul>
                 </div>
               </div>
@@ -259,14 +260,10 @@
                 </div>
                 <div class="card-body py-0">
                   <ul>
-                    <li>Created and presented weekly and monthly sales and performance data</li>
-                    <li>Oversaw project progress for local and overseas marketing and development teams</li>
-                    <li>Made content updates and performed routine maintenance for through the Magento platform</li>
-                    <li>Created custom content templates for category and informational pages using HTML and CSS</li>
-                    <li>Developed and modified javascript code to track and alter site content based on customer usage</li>
-                    <li>Developed long and short term strategies to grow sales revenue and conversion rate</li>
-                    <li>Researched and implemented third party solutions to improve website experience</li>
-                    <li>Performed routine tests to monitor site performance and page speed</li>
+                    <li>Managed global development and local marketing teams of Magento eCommerce website.</li>
+                    <li>Developed front end features with Javascript and jQuery including tracker for coupon codes and sticky navigation bar.</li>
+                    <li>Implemented installation and management of vendor application applications including search providers, popup modals and cart reminders.</li>
+                    <li>Generated weekly and monthly sales reports for online and inside sales departments in Microsoft Excel using formulas and pivot tables.</li>
                   </ul>
                 </div>
               </div>
