Update about me

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="row pt-4 pl-4 pr-4 pb-2">
             <h5 class="underline"><span>About Me</span></h5>
             <div class="px-2">
-              <p>For more than 10 years I have developed a wide range of skills including web management, software development, project management and graphic design. My desire to continuously learn and grow both professionally and personally has helped me to continue to thrive in new environments with teams of all sizes. I am excited to continue my journey and build an amazing user experience with a diverse team.</p>
+              <p>For more than 10 years I have developed a wide range of skills including web management, software development, project management and graphic design. Outside of work, I can be found spending time with my daughters, playing board games with my wife or trying new sourdough recipes. My desire to continuously learn and grow both professionally and personally has helped me to continue to thrive in new environments with teams of all sizes. I am excited to continue my journey and build an amazing user experience with a diverse team. </p>
               <p>To learn more about my history, please browse my github or contact me directly. I look forward to hearing from you.</p>
             </div>
           </div>
