--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div class="row">
       <div class="col-2 p-0">
         <div class="card photo">
-          <img src="images/christopherpitts.png" alt="Christopher Pitts" class="w-100">
+          <img src="images/christopherpitts.jpg" alt="Christopher Pitts" class="w-100">
         </div>
       </div>
       <div class="col-6 bg-white my-4 p-0">
         <div class="row pl-5 pt-4">
           <div class="col">
             <h2 class="name m-0"><span class="underline">Christopher Pitts</span></h2>
-            <div class="title">Developer</div>
+            <div class="title">Software Developer</div>
           </div>
         </div>
         <div class="row pl-5 pt-3">
