--- a/giftalk.html
+++ b/giftalk.html
@@ -36,10 +36,14 @@
           <li data-target="#gifChat" data-slide-to="3"></li>
           <li data-target="#gifChat" data-slide-to="4"></li>
           <li data-target="#gifChat" data-slide-to="5"></li>
+          <li data-target="#gifChat" data-slide-to="6"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="https://media.giphy.com/media/Nx0rz3jtxtEre/giphy.gif" class="d-block w-100" alt="Hello There!">
+          </div>
+          <div class="carousel-item">
+            <img src="https://media.giphy.com/media/C7olQswvzSwAE/giphy.gif" alt="Who am I?">
           </div>
           <div class="carousel-item">
             <img src="https://thumbs.gfycat.com/ClearcutWellmadeGibbon-size_restricted.gif" alt="Hard Worker">
