Change slideshow to fade

--- a/giftalk.html
+++ b/giftalk.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Gif Talk</title>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/40538e0056.js" crossorigin="anonymous"></script>
 
@@ -22,13 +22,13 @@
 
           </div>
           <div class="col pt-3 justify-content-right">
-<div class="link"><a href="../index.html"><span class="fas fa-home"></span> Return to Home</a></div>
+<div class="link"><a href="./index.html"><span class="fas fa-home"></span> Return to Home</a></div>
             </div>
           </div>
 
   <div class="row mt-3 mx-auto w-75">
     <div class="col">
-      <div id="gifChat" class="carousel slide" data-ride="carousel" data-interval='false'>
+      <div id="gifChat" class="carousel slide carousel-fade" data-ride="carousel" data-interval='false'>
         <ol class="carousel-indicators">
           <li data-target="#gifChat" data-slide-to="0" class="active"></li>
           <li data-target="#gifChat" data-slide-to="1"></li>
